--- a/Omal/Views/AboutPage.xaml
+++ b/Omal/Views/AboutPage.xaml
@@ -1,5 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Omal.AboutPage" xmlns:vm="clr-namespace:Omal;" Title="{Binding Title}">
+<?xml version="1.0" encoding="utf-8"?>
+<ContentPage 
+    xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Omal.AboutPage" xmlns:vm="clr-namespace:Omal;" Title="{Binding Title}">
 	<ContentPage.BindingContext>
 		<vm:AboutViewModel />
 	</ContentPage.BindingContext>
