--- a/Omal/Views/SearchV.xaml
+++ b/Omal/Views/SearchV.xaml
@@ -6,12 +6,10 @@ Title="{Binding CurTitle}"
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="{Binding LoginOrLogOutActionText}" Command="{Binding LoginOrLogoutCommand}" />
     </ContentPage.ToolbarItems>
-
     <ContentPage.Resources>
-        
     </ContentPage.Resources>
-    
 	   <ContentPage.Content>
+        <ScrollView>
         <Grid Padding="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -37,6 +35,6 @@ Title="{Binding CurTitle}"
                 <Button Text="Dettagli"  />
             </StackLayout>
         </Grid>
-
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
