--- a/Omal/App.xaml
+++ b/Omal/App.xaml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Application
     xmlns:Converters="clr-namespace:Omal.Converters"
+    xmlns:CControls="clr-namespace:Omal.CustomControls"
     xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Omal.App">
 	<Application.Resources>
 		<ResourceDictionary>
-			<Color x:Key="Primary">#2196F3</Color>
-			<Color x:Key="PrimaryDark">#1976D2</Color>
+			<Color x:Key="Primary">#004899</Color>
+			<Color x:Key="PrimaryDark">Red</Color>
 			<Color x:Key="Accent">#96d1ff</Color>
 			<Color x:Key="LightBackgroundColor">#FAFAFA</Color>
 			<Color x:Key="DarkBackgroundColor">#C0C0C0</Color>
@@ -14,24 +15,47 @@
 			<Style TargetType="NavigationPage">
 				<Setter Property="BarBackgroundColor" Value="{StaticResource Primary}" />
 				<Setter Property="BarTextColor" Value="White" />
+                <Setter Property="BackgroundColor" Value="#EAEAEA" />
 			</Style>
+            <Style TargetType="ContentPage" ApplyToDerivedTypes="True">
+                <Setter Property="BackgroundColor" Value="#EAEAEA" />
+            </Style>
+            <Style TargetType="TabbedPage" ApplyToDerivedTypes="true">
+                <Setter Property="BarBackgroundColor" Value="#5E5B5B" />
+                <Setter Property="BackgroundColor" Value="#5E5B5B" />
+            </Style>
+            <Style TargetType="Picker" ApplyToDerivedTypes="true">
+                <Setter Property="BackgroundColor" Value="#FFFFFF" />
+            </Style>
             <Style x:Key="Titolo" TargetType="Label">
-                <Setter Property="TextColor" Value="Blue" />
-                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="TextColor" Value="#004899" />
+                <Setter Property="FontFamily" Value="Montserrat-Bold" />
             </Style>
             <Style x:Key="Descrizione" TargetType="Label">
                 <Setter Property="TextColor" Value="Gray" />
                 <Setter Property="FontAttributes" Value="Italic" />
                 <Setter Property="FontSize" Value="13" /> 
             </Style>
+            <Style TargetType="Entry">
+                <Setter Property="TextColor" Value="#FFFFFF" />
+                <Setter Property="FontFamily" Value="Montserrat-Medium" />
+                <Setter Property="BackgroundColor" Value="#60A5D1" />
+            </Style>
+            <Style TargetType="CControls:CualevaRoundedEntry">
+                <Setter Property="TextColor" Value="#FFFFFF" />
+                <Setter Property="FontFamily" Value="Montserrat-Medium" />
+                <Setter Property="BackgroundColor" Value="#60A5D1" />
+            </Style>
             <Style  TargetType="Button">
-                <Setter Property="TextColor" Value="White" />
+                <Setter Property="BorderWidth" Value="1.5" />
+                <Setter Property="BorderColor" Value="#60A5D1" />
+                <Setter Property="TextColor" Value="#60A5D1" />
                 <Setter Property="WidthRequest" Value="100" />
-                <Setter Property="BorderRadius" Value="5" />
-                <Setter Property="FontAttributes" Value="Bold" />
-                <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
+                <Setter Property="BorderRadius" Value="20" />
+                <Setter Property="BackgroundColor" Value="#FFFFFF" />
                 <Setter Property="Margin" Value="5" />
                 <Setter Property="HorizontalOptions" Value="End" />
+                <Setter Property="FontFamily" Value="Montserrat-Bold" />
             </Style>
             <Converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
 		</ResourceDictionary>
