--- a/Omal/Views/SearchV.xaml
+++ b/Omal/Views/SearchV.xaml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage 
-
-Title="{Binding CurTitle}"
-    xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Omal.Views.SearchV">
+<ContentPage Title="{Binding CurTitle}"
+    xmlns="http://xamarin.com/schemas/2014/forms" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+    x:Class="Omal.Views.SearchV"
+    xmlns:CControls="clr-namespace:Omal.CustomControls"
+    >
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="{Binding LoginOrLogOutActionText}" Command="{Binding LoginOrLogoutCommand}" />
     </ContentPage.ToolbarItems>
@@ -19,14 +21,15 @@ Title="{Binding CurTitle}"
             <StackLayout Margin="0,0,0,0" Grid.Row="0" Orientation="Vertical">
                <Label Style="{StaticResource Titolo}">Prodotti</Label>
                 <Label Style="{StaticResource Descrizione}">Cerca il prodotto inserendo una parte del nome</Label>
-               <Entry Placeholder="Cerca Prodotto" Text="{Binding ProductNameFilter, Mode=TwoWay}"></Entry>
-                <Button Command="{Binding SearchWithProductNameCommand, Mode=TwoWay}"  Text="Cerca" HorizontalOptions="End" />
+                <Entry Placeholder="Cerca Prodotto" Text="{Binding ProductNameFilter, Mode=TwoWay}"></Entry>
+
+                <Button Command="{Binding SearchWithProductNameCommand, Mode=TwoWay}" Text="Cerca" HorizontalOptions="End" />
             </StackLayout>
             <StackLayout Margin="0,0,0,0" Grid.Row="1" Orientation="Vertical">
                 <Label Style="{StaticResource Descrizione}">Cerca il prodotto dichiarando una o pià categorie di appartenenza</Label>
-                <Picker HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPrimoLivello}" ItemsSource="{Binding PrimoLivello}"  />
-                <Picker HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedSecondoLivello}" ItemsSource="{Binding SecondoLivello}" />
-                <Picker HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedTerzoLivello}" ItemsSource="{Binding TerzoLivello}" />
+                <Picker BackgroundColor="White" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPrimoLivello}" ItemsSource="{Binding PrimoLivello}"  />
+                <Picker BackgroundColor="White" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedSecondoLivello}" ItemsSource="{Binding SecondoLivello}" />
+                <Picker BackgroundColor="White" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedTerzoLivello}" ItemsSource="{Binding TerzoLivello}" />
                 <Button Text="Cerca" Command="{Binding SearchWithCategoriesCommand }"/>
             </StackLayout>
             <StackLayout Margin="0,0,0,0" Grid.Row="2" Orientation="Vertical">
